QR page Filters Save with all Mapping